--- a/src_files.yml
+++ b/src_files.yml
@@ -1,6 +1,6 @@
 common_cells_all:
   files:
-    - src/fifo.sv
+    - src/fifo_v2.sv
     - src/lfsr_8bit.sv
     - src/spill_register.sv
     - src/stream_register.sv
